# SelectionModel

./: README.md  inference.py  preprocess.py  pyproject.toml  train.py  train.sh
configs/: top1.yaml  top20.yaml
notebooks/: GenDataset.ipynb  Score.ipynb  Upload HuggingFace.ipynb
shell/: train.sh
